samples/_failures_safe/1761629848_d8c79b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c0fad3b3.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_c0fad3b3.c:159:5: error: expected expression at end of input
  159 |     for (
      |     ^~~
./samples/SAFE/__tmp_c0fad3b3.c:159:5: error: expected declaration or statement at end of input
